--- a/kawn_subscriptions_manager/templates/clients/sales/list_client.html
+++ b/kawn_subscriptions_manager/templates/clients/sales/list_client.html
@@ -77,14 +77,14 @@
                     <table class="table table-sm" id="table1">
                         <thead>
                             <tr>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Client Name</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Address</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder text-end">Phone</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Brand Name</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Facebook</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Twitter</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Instagram</th>
-                                <th class="text-center text-uppercase text-xxs font-weight-bolder" style="width: 15%;">Action</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 14.5%;">Client Name</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 20%;">Address</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder text-end" style="width: 9.5%;">Phone</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 9%;">Brand Name</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 9%;">Facebook</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 9%;">Twitter</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 9%;">Instagram</th>
+                                <th class="text-center text-uppercase text-xxs font-weight-bolder" style="width: 20%;">Action</th>
                             </tr>
                         </thead>
                         <tbody>
