--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/sales/list_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/sales/list_subscription_plan.html
@@ -109,12 +109,12 @@
           <table class="table table-sm" id="table1">
             <thead>
               <tr>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder">Name</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Trial Period</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Price</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder">Trial Unit</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Recurrence Period</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder">Recurrence Unit</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 26%;">Name</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Trial Period</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 22%;">Price</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 10%;">Trial Unit</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 10%;">Rec. Period</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 16%;">Rec. Unit</th>
               </tr>
             </thead>
             <tbody>
