--- a/kawn_subscriptions_manager/templates/clients/list_client.html
+++ b/kawn_subscriptions_manager/templates/clients/list_client.html
@@ -104,15 +104,15 @@
                     <table class="table table-sm" id="table1">
                         <thead>
                             <tr>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Client Name</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Address</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder text-end">Phone</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Brand Name</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Facebook</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Twitter</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Instagram</th>
-                                <th class="text-uppercase text-xxs text-dark font-weight-bolder">Sales Name</th>
-                                <th class="text-center text-uppercase text-xxs text-dark font-weight-bolder" style="width: 15%;">Action</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 17%;">Client Name</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 20%;">Address</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder text-end" style="width: 12%;">Phone</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 12%;">Brand Name</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 10%;">Facebook</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 10%;">Twitter</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 10%;">Instagram</th>
+                                <th class="text-uppercase text-xxs text-dark font-weight-bolder" style="width: 11%;">Sales Name</th>
+                                <th class="text-center text-uppercase text-xxs text-dark font-weight-bolder" style="width: 26%;">Action</th>
                             </tr>
                         </thead>
                         <tbody>
