--- a/kawn_subscriptions_manager/templates/subscriptions/list_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/list_subscription.html
@@ -82,12 +82,12 @@
               <table class="table table-sm" id="table1">
                 <thead>
                   <tr>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder">Outlet Name</th>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder">Subscription Plan</th>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Billing Date</th>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Expired Date</th>
-                    <th class="text-uppercase text-xs text-dark font-weight-bolder">Status</th>
-                    <th class="text-center text-uppercase text-xs text-dark font-weight-bolder">Action</th>
+                    <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 23%;">Outlet Name</th>
+                    <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 16%;">Subscription Plan</th>
+                    <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Billing Date</th>
+                    <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Expired Date</th>
+                    <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 13%;">Status</th>
+                    <th class="text-uppercase text-xs text-dark font-weight-bolder text-center" style="width: 16%;">Action</th>
                   </tr>
                 </thead>
                 <tbody>
@@ -113,16 +113,9 @@
                       {% endif%}
                     </td>
                     <td class="align-middle text-center px-4">
-                      {% if data.active == True %}
-                      <a href="{% url 'subscriptions:deactivate_subscription' data.id %}" class="btn btn-sm bg-danger text-white text-xs">
-                        Deactivate
+                      <a href="{% url 'subscriptions:detail_subscription' data.id %}" class="btn btn-sm bg-gradient-faded-info text-white text-xs">
+                        Detail
                       </a>
-                      {% else %}
-                      <a href="{% url 'subscriptions:activate_subscription' data.id %}" class="btn btn-sm bg-info text-white text-xs">
-                        Activate
-                      </a>
-                      {% endif %}
-                    </td>
                     </td>
                   </tr>
                   {% empty %}
