--- a/kawn_subscriptions_manager/templates/subscriptions/sales/list_subscription.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/sales/list_subscription.html
@@ -82,17 +82,17 @@
         </div>
       </div>
       <section class="section">
-        <div class="card">
-          <div class="card-body">
+        <div class="card-body">
+          <div class="table-responsive p-0">
             <table class="table table-sm" id="table1">
               <thead>
                 <tr>
-                  <th class="text-uppercase text-xs text-dark font-weight-bolder">Outlet Name</th>
-                  <th class="text-uppercase text-xs text-dark font-weight-bolder">Subscription Plan</th>
-                  <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Billing Date</th>
-                  <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Expired Date</th>
-                  <th class="text-uppercase text-xs text-dark font-weight-bolder">Status</th>
-                  <th class="text-center text-uppercase text-xs text-dark font-weight-bolder">Action</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 22%;">Outlet Name</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 16%;">Subscription Plan</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Billing Date</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 16%;">Expired Date</th>
+                  <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 10%;">Status</th>
+                  <th class="text-center text-uppercase text-xs text-dark font-weight-bolder" style="width: 20%;">Action</th>
                 </tr>
               </thead>
               <tbody>
