--- a/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/list_subscription_plan.html
+++ b/kawn_subscriptions_manager/templates/subscriptions/subscription_plans/list_subscription_plan.html
@@ -95,7 +95,7 @@
                 <button class="btn bg-gradient-info mt-2 mb-0">
                   <a href="{% url 'subscriptions:list_subscription_plan' %}" class="text-white">
                     Clear Filter
-                  </a>
+                  </a> style="width: 12.5%;"
                 </button>
               </div>
             </div>
@@ -109,14 +109,14 @@
           <table class="table table-sm" id="table1">
             <thead>
               <tr>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder">Name</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Trial Period</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Price</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder">Trial Unit</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end">Rec. Period</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder">Rec. Unit</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder">Status</th>
-                <th class="text-uppercase text-xs text-dark font-weight-bolder text-center" style="width: 15%;">Action</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 13.5%;">Name</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 12.5%;">Trial Period</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 12.5%;">Price</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 10%;">Trial Unit</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-end" style="width: 10%;">Rec. Period</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 10%;">Rec. Unit</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder" style="width: 10%;">Status</th>
+                <th class="text-uppercase text-xs text-dark font-weight-bolder text-center" style="width: 21.5%;">Action</th>
               </tr>
             </thead>
             <tbody>
@@ -144,7 +144,7 @@
                   {% if data.is_active %}
                   <p class="text-xs font-weight-bold mb-0">Active</p>
                   {% else %}
-                  <p class="text-xs mb-0">Not Active</p>
+                  <p class="text-xs font-weight-bold mb-0">Not Active</p>
                   {% endif %}
                 </td>
                 <td class="align-middle">
